--- a/src/main/resources/templates/fragments/dashboard/footer.html
+++ b/src/main/resources/templates/fragments/dashboard/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-xxl text-center py-4 mt-4" th:fragment="dashboardFooter">
+<footer class="container-xxl text-center py-4 mt-4" th:fragment="footer">
   <p class="footer-note mb-0">
     &copy; <span>2025</span>
     GIC Online Test System. For visual reference only.
