--- a/src/main/resources/templates/fragments/dashboard/hero.html
+++ b/src/main/resources/templates/fragments/dashboard/hero.html
@@ -1,4 +1,4 @@
-<header class="container-xxl mb-5" th:fragment="dashboardHero">
+<header class="container-xxl mb-5" th:fragment="hero">
   <div class="hero row g-4 align-items-center">
     <div class="col-auto">
       <div class="brand-badge">
