Add "Update" button in dashboard

--- a/src/main/resources/templates/fragments/dashboard/employee-management.html
+++ b/src/main/resources/templates/fragments/dashboard/employee-management.html
@@ -27,6 +27,9 @@
         <i class="bi bi-person-plus"></i>
         Add Employee
       </button>
+      <a th:href="@{/employees/update}" class="btn btn-primary">
+        <i class="fas fa-edit me-2"></i>Update
+      </a>
     </div>
   </div>
 
