--- a/src/main/resources/templates/employees/update.html
+++ b/src/main/resources/templates/employees/update.html
@@ -74,7 +74,7 @@
             <form id="studentUpdateForm" action="/student/update" method="post">
                 <div class="tab-content" id="studentTabContent">
                     
-                    <!-- Tab 1 -->
+                <!-- Tab 1 -->
                     <div class="tab-pane fade show active" id="basic" role="tabpanel">
                         <div class="form-section">
                             <div class="row g-3">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     
-                    <!-- Tab 2 -->
+                <!-- Tab 2 -->
                     <div class="tab-pane fade" id="status" role="tabpanel">
                         <div class="form-section">
                             <div class="row g-3">
@@ -166,7 +166,8 @@
                                     <label class="form-label">その他希望職種</label>
                                     <input type="text" class="form-control" name="other_job" id="otherJobInput" disabled>
                                 </div>
-                                
+                                <div></div>
+
                                 <div class="col-md-6">
                                     <label class="form-label">宗教</label>
                                     <select class="form-select" name="religion" id="religion">
@@ -181,6 +182,7 @@
                                     <label class="form-label">その他宗教</label>
                                     <input type="text" class="form-control" name="other_religion" id="otherReligionInput" disabled>
                                 </div>
+                                <div></div>
 
                                 <div class="col-md-4">
                                     <label class="form-label">合格した日本語ラベル</label>
@@ -276,7 +278,7 @@
                         </div>
                     </div>
                     
-                    <!-- Tab 3 -->
+                <!-- Tab 3 -->
                     <div class="tab-pane fade" id="n5" role="tabpanel">
                         <div class="form-section">
                             <div class="sub-section-header main-class-header"><i class="fas fa-chalkboard me-2"></i>N5クラス情報明細</div>
@@ -389,7 +391,7 @@
                         </div>
                     </div>
                     
-                    <!-- Tab 4 -->
+                <!-- Tab 4 -->
                     <div class="tab-pane fade" id="n4" role="tabpanel">
                         <div class="form-section">
                             <div class="sub-section-header main-class-header"><i class="fas fa-chalkboard me-2"></i>N4クラス情報明細</div>
@@ -540,7 +542,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <div class="d-flex justify-content-end align-items-center">
+                    <div class="d-flex justify-content-center align-items-center">
                         <div>
                             <button type="button" class="btn btn-secondary me-2" id="cancelBtn">
                                 <i class="fas fa-times me-2"></i>キャンセル
