--- a/src/main/resources/templates/employees/update.html
+++ b/src/main/resources/templates/employees/update.html
@@ -135,7 +135,7 @@
                                 </div>
 
                                 <div class="col-12">
-                                    <label class="form-label">現在住所</label>
+                                    <label class="form-label">現住所</label>
                                     <textarea class="form-control" name="current_address" rows="2"></textarea>
                                 </div>
                                 
@@ -185,7 +185,7 @@
                                 <div></div>
 
                                 <div class="col-md-4">
-                                    <label class="form-label">合格した日本語ラベル</label>
+                                    <label class="form-label">合格した日本語レベル</label>
                                     <input type="text" class="form-control" name="passed_jp_label">
                                 </div>
                                 <div class="col-md-4">
@@ -249,7 +249,7 @@
                                     </select>
                                 </div>
                                 <div class="col-md-4">
-                                    <label class="form-label">入れ墨</label>
+                                    <label class="form-label">入れ墨(Tattoo)</label>
                                     <select class="form-select" name="tattoo">
                                         <option value="">選択</option>
                                         <option>ある</option>
@@ -337,7 +337,7 @@
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">教師所感</label>
-                                    <textarea class="form-control" name="n5_c1_note" rows="1"></textarea>
+                                    <textarea class="form-control" name="n5_c1_note" rows="2"></textarea>
                                 </div>
                             </div>
 
@@ -361,7 +361,7 @@
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">教師所感</label>
-                                    <textarea class="form-control" name="n5_c2_note" rows="1"></textarea>
+                                    <textarea class="form-control" name="n5_c2_note" rows="2"></textarea>
                                 </div>
                             </div>
 
@@ -385,7 +385,7 @@
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">教師所感</label>
-                                    <textarea class="form-control" name="n5_c3_note" rows="1"></textarea>
+                                    <textarea class="form-control" name="n5_c3_note" rows="2"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -450,7 +450,7 @@
                                  </div>
                                  <div class="col-12">
                                      <label class="form-label">教師所感</label>
-                                     <textarea class="form-control" name="n4_c1_note" rows="1"></textarea>
+                                     <textarea class="form-control" name="n4_c1_note" rows="2"></textarea>
                                  </div>
                              </div>
  
@@ -474,7 +474,7 @@
                                  </div>
                                  <div class="col-12">
                                      <label class="form-label">教師所感</label>
-                                     <textarea class="form-control" name="n4_c2_note" rows="1"></textarea>
+                                     <textarea class="form-control" name="n4_c2_note" rows="2"></textarea>
                                  </div>
                              </div>
  
@@ -498,7 +498,7 @@
                                  </div>
                                  <div class="col-12">
                                      <label class="form-label">教師所感</label>
-                                     <textarea class="form-control" name="n4_c3_note" rows="1"></textarea>
+                                     <textarea class="form-control" name="n4_c3_note" rows="2"></textarea>
                                  </div>
                              </div>
                         </div>
@@ -532,7 +532,7 @@
                     </div>
                     
                     <!-- Empty space for scrolling -->
-                    <div style="height: 100px;"></div>
+                    <div style="height: 90px;"></div>
                 </div>
             </form>
         </div>
