その他 page correction

--- a/src/main/resources/templates/employees/update.html
+++ b/src/main/resources/templates/employees/update.html
@@ -526,7 +526,7 @@
                                 <div class="col-12">
                                     <label class="form-label">その他メモ（自由形式）</label>
                                     <textarea class="form-control" name="other_memo" rows="4"></textarea>
-                                </div>>
+                                </div>
                             </div>
                         </div>
                     </div>
